# headroom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Cargo.toml  Makefile  README.md  RUST_DEV.md  bandit_result.txt  codecov.yml  index.html  mkdocs.yml  pyproject.toml  reqs.txt  sitemap.xml
.claude-plugin/: marketplace.json
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  docker.yml  init-native-e2e.yml  release.yml  rust.yml  wrap-e2e.yml
ARCHITECTURE/: index.html
LATENCY_BENCHMARKS/: index.html
LIMITATIONS/: index.html
agno/: index.html
api/: index.html
benchmarks/: claude_session_mode_benchmark.py  index.html
ccr/: index.html
compression/: index.html
configuration/: index.html
content/docs/: configuration.mdx  installation.mdx
crates/headroom-core/: Cargo.toml
crates/headroom-core/src/: ccr.rs  lib.rs
crates/headroom-core/src/tokenizer/: hf_impl.rs  mod.rs  registry.rs
crates/headroom-core/src/transforms/: diff_compressor.rs  mod.rs
crates/headroom-core/src/transforms/smart_crusher/: anchors.rs  config.rs  crusher.rs  statistics.rs
crates/headroom-proxy/: Cargo.toml
crates/headroom-py/: Cargo.toml  pyproject.toml
crates/headroom-py/src/: lib.rs
docker/: docker-compose.native.yml
docs/: cli.md  docker-install.md  getting-started.md  index.md  integration-guide.md  learn.md  memory.md  metrics.md  proxy.md  quickstart.md
e2e/: docker-native-install.sh
e2e/wrap/: Dockerfile  run.py
errors/: index.html
getting-started/: index.html
headroom/: __init__.py  _version.py  binaries.py  compress.py  copilot_auth.py  parser.py  release_version.py  tools.json
headroom/ccr/: mcp_server.py
headroom/cli/: __init__.py  init.py  main.py  mcp.py  proxy.py  tools.py  wrap.py
headroom/compression/: detector.py
headroom/install/: runtime.py  state.py
headroom/learn/: analyzer.py  scanner.py  writer.py
headroom/memory/: traffic_learner.py
headroom/observability/: metrics.py  tracing.py
headroom/proxy/: cost.py  extensions.py  helpers.py  loopback_guard.py  models.py  prometheus_metrics.py  request_logger.py  savings_tracker.py  server.py  stage_timer.py  ws_session_registry.py
headroom/rtk/: __init__.py  installer.py
headroom/subscription/: tracker.py
headroom/telemetry/: beacon.py  toin.py
headroom/tokenizers/: base.py
headroom/transforms/: content_router.py  diff_compressor.py  pipeline.py  smart_crusher.py
image-compression/: index.html
integration-guide/: index.html
langchain/: index.html
learn/: index.html
llmlingua/: index.html
macos-deployment/: index.html
mcp/: index.html
memory/: index.html
metrics/: index.html
plans/dynamic-smart-crusher/: index.html
plugins/openclaw/: README.md  openclaw.plugin.json  package-lock.json  package.json
proxy/: index.html
quickstart/: index.html
scripts/: build_rust_extension.sh  install.ps1  install.sh  repro_codex_replay.py  sync-plugin-versions.py  validate-workflows.sh  version-sync.py
scripts/tests/: test_version_sync.py
sdk/: index.html
search/: search_index.json
shared-context/: index.html
strands/: index.html
tests/: test_anthropic_pre_upstream_backpressure.py  test_binaries.py  test_bundled_tools_savings.py  test_cli_proxy_env.py  test_compression_observability.py  test_copilot_auth.py  test_memory_handler_native_ops.py  test_openai_codex_routing.py  test_paths_backward_compat.py  test_plugin_manifests.py  test_proxy_anthropic_compression_diagnostics.py  test_proxy_copilot_auth_hooks.py  test_proxy_dashboard_stats_cache.py  test_proxy_handlers_batch.py  test_proxy_healthchecks.py  test_proxy_openai_cache_stability.py  test_proxy_savings_history.py  test_proxy_streaming_ratelimit_headers.py  test_proxy_streaming_request_logger.py  test_proxy_telemetry_env.py  test_release_version.py  test_release_workflows.py  test_relevance_extra.py  test_tool_result_interceptors.py
tests/parity/: recorder.py
tests/test_cli/: test_init_cli.py  test_wrap_bridge.py  test_wrap_copilot.py  test_wrap_openclaw.py  test_wrap_persistent.py
tests/test_install/: test_native_installers.py  test_runtime.py
tests/test_learn/: test_analyzer.py  test_scanner.py  test_writer.py
tests/test_memory/: test_traffic_learner.py
tests/test_proxy/: test_compute_turn_id.py
text-compression/: index.html
transforms/: index.html
troubleshooting/: index.html
typescript-sdk/: index.html
(+31 files in other folders)
