[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "headroom-core-py"
version = "0.1.0"
description = "Python bindings to the Rust headroom-core crate."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Headroom Maintainers" }]

[tool.maturin]
# Build as a submodule of the `headroom` namespace so it becomes
# `from headroom._core import hello`.
module-name = "headroom._core"
# Keep python source layout out of this directory; maturin will install the
# compiled module into an existing `headroom` package in site-packages (or
# the active venv's overlay created by `maturin develop`).
python-source = "python"
features = ["extension-module"]
